[gd_scene load_steps=22 format=3 uid="uid://fuyjyxn7cdur"]

[ext_resource type="Script" path="res://Script/Bullets/stickybomb.gd" id="1_82sm7"]
[ext_resource type="Texture2D" uid="uid://bht7ymuai483e" path="res://Art/Interact/SpikePlant/spike_seed.png" id="1_lqrt7"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="2_78xxj"]
[ext_resource type="Material" uid="uid://cmv24i1lrmfiw" path="res://Shader/enemy.tres" id="2_uxpv1"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="4_cutf5"]
[ext_resource type="Texture2D" uid="uid://cf007820px653" path="res://Art/Effect/ramdom_tex_2.png" id="5_vqbpn"]
[ext_resource type="AudioStream" uid="uid://2uokayc7se07" path="res://Audio/Effect/HitSound/fire_punch_finisher_06.wav" id="7_j8lwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nquvf"]
size = Vector2(48, 64)

[sub_resource type="Animation" id="Animation_nsgwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Burst:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExploedAudio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ihcyd"]
resource_name = "detonate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Burst:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExploedAudio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_544ge"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7wn5"]
_data = {
"RESET": SubResource("Animation_nsgwe"),
"detonate": SubResource("Animation_ihcyd"),
"idle": SubResource("Animation_544ge")
}

[sub_resource type="Resource" id="Resource_rlqy1"]
script = ExtResource("2_78xxj")
damage = 0.0
impact = 0.0
knockback_force = 0
element = 0
take_damage_rule = 0
take_damage_mask = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur721"]
size = Vector2(256, 256)

[sub_resource type="Gradient" id="Gradient_nm5n5"]
colors = PackedColorArray(0, 0, 0, 1, 0.90732, 0.16711, 0.0598378, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uwgbu"]
gradient = SubResource("Gradient_nm5n5")
use_hdr = true

[sub_resource type="Curve" id="Curve_c4ro7"]
max_value = 100.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 100), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2fu47"]
curve = SubResource("Curve_c4ro7")

[sub_resource type="Curve" id="Curve_8t3x0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bsf8v"]
curve = SubResource("Curve_8t3x0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtceq"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 619.72
initial_velocity_max = 619.72
gravity = Vector3(0, -100, 0)
damping_min = 32.395
damping_max = 32.395
damping_curve = SubResource("CurveTexture_2fu47")
scale_min = 0.05
scale_curve = SubResource("CurveTexture_bsf8v")
color = Color(1.5, 1.5, 1.5, 1)
color_ramp = SubResource("GradientTexture1D_uwgbu")

[node name="SpikeBomb" type="Area2D"]
collision_layer = 0
collision_mask = 33
script = ExtResource("1_82sm7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nquvf")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_uxpv1")
texture = ExtResource("1_lqrt7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7wn5")
}

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 48
script = ExtResource("4_cutf5")
damage_data = SubResource("Resource_rlqy1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource("RectangleShape2D_ur721")
disabled = true

[node name="Burst" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_rtceq")
texture = ExtResource("5_vqbpn")
one_shot = true
explosiveness = 1.0

[node name="ExploedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_j8lwv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="on_grounded"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
